# src/lib/get-authenticate-user-request.ts
@@ -1,0 +1,10 @@
+import type { FastifyRequest } from 'fastify'
+
+export function getAuthenticateUserRequest(request: FastifyRequest) {
+  const user = request.user
+
+  if (!user) {
+    throw new Error('Invalid authenticate')
+  }
+  return user
+}
